--- a/ESR/conclusions.tex
+++ b/ESR/conclusions.tex
@@ -1,5 +1,5 @@
-The statistical FEM method introduced in \textcolor{blue}{\cite{girolami2019statistical}} allowed both the FE model and observational data to be combined into a coherent inferential framework. The main goal of our work was to provide more detailed error analysis explicitly quantifying the extent by which the distributions obtained using the ``true" solution and the FEM solution differ, and then seeing how this carried forward to further inference. In particular, Theorems \textcolor{blue}{\ref{prior_distance_bound}} and \textcolor{blue}{\ref{posterior_difference_bound}} provide a full probabilistic description of the uncertainty due to using a FEM approximation for the noisy BVP (\ref{standard_conduct}). In arriving at these results the guiding principle of ``\textit{avoiding discretization until the last possible moment}" \textcolor{blue}{\cite{stuart2010inverse}} was very important.
+The statistical FEM method introduced in \textcolor{blue}{\citep{girolami2019statistical}} allowed both the FE model and observational data to be combined into a coherent inferential framework. The main goal of our work was to provide more detailed error analysis explicitly quantifying the extent by which the distributions obtained using the ``true" solution and the FEM solution differ, and then seeing how this carried forward to further inference. In particular, Theorems \textcolor{blue}{\ref{prior_distance_bound}} and \textcolor{blue}{\ref{posterior_difference_bound}} provide a full probabilistic description of the uncertainty due to using a FEM approximation for the noisy BVP (\ref{standard_conduct}). In arriving at these results the guiding principle of ``\textit{avoiding discretization until the last possible moment}" \textcolor{blue}{\citep{stuart2010inverse}} was very important.
 
 Our work carries out one of the first detailed error analysis of a probabilistic numerical method for solving a noisy PDE. However, future work and research is needed. In particular, we plan on extending this framework to time-dependent PDEs. We hope to obtain Kalman Filter-like update rules for our belief in the distribution of solutions to noisy time-dependent PDEs. We are especially interested in investigating how incorporating observational data will control the error as time progresses.
 
-Further work is also needed for the case of spatial PDEs as investigated in this report. We will aim to perform numerical methods illustrating the methodology and results presented in Sections \textcolor{blue}{\ref{general_framework}} and \textcolor{blue}{\ref{elliptic_bv_prob}}. On a more theoretical side, it will also be interesting to investigate in greater depth how the upperbound on the Wasserstein distance between the posteriors given by (\ref{post_bound}) depends on the sensor sensitivity $\epsilon$. This dependence can be potentially useful in answering questions such as ``if we have a finite budget for both computation and sensor equipment how should we allocate these resources efficiently?" and other related questions.
+Further work is also needed for the case of spatial PDEs as investigated in this report. We will aim to perform numerical experiments illustrating the methodology and results presented in Sections \textcolor{blue}{\ref{general_framework}} and \textcolor{blue}{\ref{elliptic_bv_prob}}. On a more theoretical side, it will also be interesting to investigate in greater depth how the upperbound on the Wasserstein distance between the posteriors given by (\ref{post_bound}) depends on the sensor sensitivity $\epsilon$. This dependence can be potentially useful in answering questions such as ``if we have a finite budget for both computation and sensor equipment how should we allocate these resources efficiently?" and other related questions.
